syntax = "proto3";
option go_package = "/pb";


message Address {
  string addressId = 1;
  string customerId = 2;
  string name = 3;
  string address = 4;
  string note = 5;
  string houseSize = 6;
}

service AddressService {
  rpc GetAddress (GetAddressRequest) returns (Address);
}


message GetAddressRequest {
  string addressId = 1;
}
