syntax = "proto3";
option go_package = "/pb";

message Customer {
    string customerId = 1;
    string name = 2;
    string phone = 3;
    string email = 4;
}

service CustomerService {
    rpc GetCustomer (GetCustomerRequest) returns (Customer);
}

message GetCustomerRequest {
    string customerId = 1;
}





